// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconInputWrapper should allow rendering the icon on the right 1`] = `
.circuit-4 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-2 {
  position: absolute;
  height: 16px;
  width: 16px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 12px;
  left: auto;
}

<div
  className="circuit-4 circuit-5"
>
  <div
    className="circuit-0 circuit-1"
  />
  <div
    className="circuit-2 circuit-1"
  />
</div>
`;

exports[`IconInputWrapper should render with default styles 1`] = `
.circuit-4 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  padding-left: calc( 12px + 16px + 12px );
}

.circuit-2 {
  position: absolute;
  height: 16px;
  width: 16px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: 12px;
  right: auto;
}

<div
  className="circuit-4 circuit-5"
>
  <div
    className="circuit-0 circuit-1"
  />
  <div
    className="circuit-2 circuit-1"
  />
</div>
`;
